objects/Known_Issue__c.object
<CustomObject>
    <fields>
        <fullName>Application_Backend__c</fullName>
        <label>Application-Backend</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Backend</fullName>
                </value>
                <value>
                    <fullName>Backend Heroku US</fullName>
                </value>
                <value>
                    <fullName>Backend Heroku EU</fullName>
                </value>
                <value>
                    <fullName>Backend CopaGCP</fullName>
                </value>
                <value>
                    <fullName>Copado MCDX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>copado__Application__c</referenceTo>
        <relationshipLabel>Known Issues</relationshipLabel>
        <relationshipName>Known_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ETA__c</fullName>
        <inlineHelpText>Estimated Date</inlineHelpText>
        <label>Internal ETA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ETA__c</fullName>
        <description>ETA Month</description>
        <formula>CASE(MONTH(ETA__c),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ETA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Higher_or_Lower__c</fullName>
        <label>Higher or Lower</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>and higher</fullName>
                </value>
                <value>
                    <fullName>and lower</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Impacted_Users__c</fullName>
        <label>Impacted Users</label>
        <summaryForeignKey>Known_Issue_Impacted_User__c.Known_Issue__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Major__c</fullName>
        <label>Major</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>v13</fullName>
                </value>
                <value>
                    <fullName>v14</fullName>
                </value>
                <value>
                    <fullName>v15</fullName>
                </value>
                <value>
                    <fullName>v16</fullName>
                </value>
                <value>
                    <fullName>v17</fullName>
                </value>
                <value>
                    <fullName>v18</fullName>
                </value>
                <value>
                    <fullName>v19</fullName>
                </value>
                <value>
                    <fullName>v20</fullName>
                </value>
                <value>
                    <fullName>v21</fullName>
                </value>
                <value>
                    <fullName>v22</fullName>
                </value>
                <value>
                    <fullName>v23</fullName>
                </value>
                <value>
                    <fullName>v24</fullName>
                </value>
                <value>
                    <fullName>v25</fullName>
                </value>
                <value>
                    <fullName>v26</fullName>
                </value>
                <value>
                    <fullName>v27</fullName>
                </value>
                <value>
                    <fullName>v28</fullName>
                </value>
                <value>
                    <fullName>v29</fullName>
                </value>
                <value>
                    <fullName>v30</fullName>
                </value>
                <value>
                    <fullName>v31</fullName>
                </value>
                <value>
                    <fullName>v32</fullName>
                </value>
                <value>
                    <fullName>v33</fullName>
                </value>
                <value>
                    <fullName>v34</fullName>
                </value>
                <value>
                    <fullName>v35</fullName>
                </value>
                <value>
                    <fullName>v36</fullName>
                </value>
                <value>
                    <fullName>v37</fullName>
                </value>
                <value>
                    <fullName>v38</fullName>
                </value>
                <value>
                    <fullName>v39</fullName>
                </value>
                <value>
                    <fullName>v40</fullName>
                </value>
                <value>
                    <fullName>v41</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Minor__c</fullName>
        <label>Minor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>.0</fullName>
                </value>
                <value>
                    <fullName>.1</fullName>
                </value>
                <value>
                    <fullName>.2</fullName>
                </value>
                <value>
                    <fullName>.3</fullName>
                </value>
                <value>
                    <fullName>.4</fullName>
                </value>
                <value>
                    <fullName>.5</fullName>
                </value>
                <value>
                    <fullName>.6</fullName>
                </value>
                <value>
                    <fullName>.7</fullName>
                </value>
                <value>
                    <fullName>.8</fullName>
                </value>
                <value>
                    <fullName>.10</fullName>
                </value>
                <value>
                    <fullName>.11</fullName>
                </value>
                <value>
                    <fullName>.12</fullName>
                </value>
                <value>
                    <fullName>.13</fullName>
                </value>
                <value>
                    <fullName>.14</fullName>
                </value>
                <value>
                    <fullName>.15</fullName>
                </value>
                <value>
                    <fullName>.16</fullName>
                </value>
                <value>
                    <fullName>.17</fullName>
                </value>
                <value>
                    <fullName>.18</fullName>
                </value>
                <value>
                    <fullName>.19</fullName>
                </value>
                <value>
                    <fullName>.20</fullName>
                </value>
                <value>
                    <fullName>.21</fullName>
                </value>
                <value>
                    <fullName>.22</fullName>
                </value>
                <value>
                    <fullName>.23</fullName>
                </value>
                <value>
                    <fullName>.24</fullName>
                </value>
                <value>
                    <fullName>.25</fullName>
                </value>
                <value>
                    <fullName>.26</fullName>
                </value>
                <value>
                    <fullName>.27</fullName>
                </value>
                <value>
                    <fullName>.28</fullName>
                </value>
                <value>
                    <fullName>.29</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Module</label>
        <referenceTo>Module__c</referenceTo>
        <relationshipLabel>Known Issues</relationshipLabel>
        <relationshipName>Known_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Patch__c</fullName>
        <label>Patch</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>.0</fullName>
                </value>
                <value>
                    <fullName>.1</fullName>
                </value>
                <value>
                    <fullName>.2</fullName>
                </value>
                <value>
                    <fullName>.3</fullName>
                </value>
                <value>
                    <fullName>.4</fullName>
                </value>
                <value>
                    <fullName>.5</fullName>
                </value>
                <value>
                    <fullName>.6</fullName>
                </value>
                <value>
                    <fullName>.7</fullName>
                </value>
                <value>
                    <fullName>.8</fullName>
                </value>
                <value>
                    <fullName>.10</fullName>
                </value>
                <value>
                    <fullName>.11</fullName>
                </value>
                <value>
                    <fullName>.12</fullName>
                </value>
                <value>
                    <fullName>.13</fullName>
                </value>
                <value>
                    <fullName>.14</fullName>
                </value>
                <value>
                    <fullName>.15</fullName>
                </value>
                <value>
                    <fullName>.16</fullName>
                </value>
                <value>
                    <fullName>.17</fullName>
                </value>
                <value>
                    <fullName>.18</fullName>
                </value>
                <value>
                    <fullName>.19</fullName>
                </value>
                <value>
                    <fullName>.20</fullName>
                </value>
                <value>
                    <fullName>.21</fullName>
                </value>
                <value>
                    <fullName>.22</fullName>
                </value>
                <value>
                    <fullName>.23</fullName>
                </value>
                <value>
                    <fullName>.24</fullName>
                </value>
                <value>
                    <fullName>.25</fullName>
                </value>
                <value>
                    <fullName>.26</fullName>
                </value>
                <value>
                    <fullName>.27</fullName>
                </value>
                <value>
                    <fullName>.28</fullName>
                </value>
                <value>
                    <fullName>.29</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the Know Issue</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Known_Issue_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Steps_to_reproduce__c</fullName>
        <label>Steps to reproduce</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <description>Summary of the known issue</description>
        <label>Summary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>A title describing the known issue</description>
        <label>Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version_Reported__c</fullName>
        <formula>TEXT (Application_Backend__c)+&quot; &quot;+TEXT(Major__c)+TEXT(Minor__c)+TEXT(Patch__c )+&quot; &quot;+TEXT(  Higher_or_Lower__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Version Reported</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version_Resolved__c</fullName>
        <label>Version Resolved</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workaround__c</fullName>
        <label>Workaround</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Known Issue</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Impacted_Users__c</columns>
        <columns>Title__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Steps_to_reproduce__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Known_Issues</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Status__c</columns>
        <columns>External_ETA__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Draft,In Review,Scheduled,In_Progress,No_Resolution,Delayed</value>
        </filters>
        <label>All Known Issues</label>
    </listViews>
    <listViews>
        <fullName>Copado_Plan_Known_Issues</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Application__c</columns>
        <columns>Module__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application__c</field>
            <operation>equals</operation>
            <value>Copado Plan</value>
        </filters>
        <filters>
            <field>Module__c</field>
            <operation>contains</operation>
            <value>Copado Change Management</value>
        </filters>
        <label>Copado Plan Known Issues</label>
    </listViews>
    <listViews>
        <fullName>Delayed_Known_Issues</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Status__c</columns>
        <columns>External_ETA__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Delayed</value>
        </filters>
        <label>4. Delayed Known Issues</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>In_Progress_Known_Issues</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Status__c</columns>
        <columns>External_ETA__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In_Progress</value>
        </filters>
        <label>3. In Progress Known Issues</label>
    </listViews>
    <listViews>
        <fullName>In_Review_Known_Issues</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Status__c</columns>
        <columns>External_ETA__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Review</value>
        </filters>
        <label>1. In Review Known Issues</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>No_Resolution_Known_Issues</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Status__c</columns>
        <columns>External_ETA__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>No_Resolution</value>
        </filters>
        <label>6. No Resolution Known Issues</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Open_Known_Issues</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Status__c</columns>
        <columns>Impacted_Users__c</columns>
        <columns>Module__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Resolved</value>
        </filters>
        <label>Open Known Issues</label>
    </listViews>
    <listViews>
        <fullName>Resolved_Known_Issues</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Status__c</columns>
        <columns>External_ETA__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Resolved</value>
        </filters>
        <label>5. Resolved Known Issues</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Rollback_Beta_KIs</fullName>
        <columns>NAME</columns>
        <columns>Impacted_Users__c</columns>
        <columns>Title__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Steps_to_reproduce__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Title__c</field>
            <operation>startsWith</operation>
            <value>Rollback (beta) -</value>
        </filters>
        <label>Rollback (Beta) KIs</label>
    </listViews>
    <listViews>
        <fullName>Scheduled_Known_Issues</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Status__c</columns>
        <columns>External_ETA__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Scheduled</value>
        </filters>
        <label>2. Scheduled Known Issues</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>KI-{00000}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Known Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>